--- a/Assets/CSS/Style.css
+++ b/Assets/CSS/Style.css
@@ -33,10 +33,12 @@ body {
 @page { margin: 0px;}
 
 /* Fixing up each page */
-.LabelPages .Pages {
-  background-color: aqua;
+.Pages {
+  /* background-color: aqua; */
   width: 210mm;
   height: 297mm;
+  /* margin-top: 2.75mm; */
+  /* padding-bottom: 4.6mm; */
   page-break-after: always;
   display: flex;
   flex-flow: column wrap;
@@ -47,10 +49,11 @@ body {
 }
 
 /* Setting up labels properly */
-.LabelPages .label {
+.label {
   height: 16.93mm;
   width: calc(100% / 3);
   position: relative;
+  /* bottom: 5.5mm; */
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -62,26 +65,16 @@ body {
 }
 
 .parameters {
-  background-color: yellow;
-  height: max-content;
+  max-width: 100vw;
+  padding: 1%;
   display: flex;
-  align-items: flex-start;
-}
-
-.preview {
-  max-height: 75vh;
-  background-color: violet;
-  page-break-after: always;
-  display: flex;
-  flex-flow: column wrap;
-  place-content: center space-evenly;
-  flex-direction: column;
-  flex-wrap: wrap;
   justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
 .settings {
-  width: 50%;
+  width: 30%;
   padding: 1%;
   margin: 1%;
   padding: 2%;
@@ -90,6 +83,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  align-content: center;
   background-color: #FFFDD0;
 }
 
@@ -99,14 +93,14 @@ body {
 }
 
 .inputs {
-  background-color: aqua;
+  /* background-color: aqua; */
   display: flex;
-  max-width: 90%;
+  max-width: 75%;
 }
 
-.inputs div {
+/* .inputs div {
   background-color: red;
-}
+} */
 
 /* Advanced settings */
 #advancedSettingsContent {
